# raytracing_work

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.h  color.h  hittable.h  hittable_list.h  image.ppm  main.cpp  main.out  material.h  ray.h  sphere.h  tools.h  vec3.h
.github/workflows/: c-cpp.yml
